# thor

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  api.py  app.py  config.py  database.py  pyproject.toml  requirements.txt  wsgi.py
api/: __init__.py
api/document/: __init__.py  document_route.py
api/invoices/: __init__.py  invoices_routes.py
api/user/: __init__.py  user_route.py
api/users/: __init__.py  users_routes.py
migrations/versions/: 43cdb1162556_create_users_table.py  43cdb1162556_first_init.py
models/: document.py  invoice.py  user.py
services/: access_token_service.py  authentication_service.py  document_controller.py  user_controller.py  user_service.py
services/document/: __init__.py  document_controller.py  document_service.py
services/user/: access_token_service.py  authentication_service.py  user_controller.py  user_service.py
