[tool.poetry]
name = "thor"
version = "1.0.0"
description = ""
authors = ["Artum Tchachkin <aptem.tchachkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
Flask = "^1.1.2"
Flask-JWT-Extended = "^3.24.1"
Flask-Login = "^0.5.0"
Flask-Migrate = "^2.5.3"
Flask-SQLAlchemy = "^2.4.4"
PyMySQL = "^0.10.1"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
oauth2client = "^4.1.3"
cryptography = "^3.2.1"
google-api-python-client = "^1.12.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
